--- a/scripts/docker/Dockerfile.frontend
+++ b/scripts/docker/Dockerfile.frontend
@@ -6,6 +6,13 @@ COPY frontend .
 ## SETUP
 RUN npm install
 
+# ACCEPT BUILD ARGS
+ARG TM_APP_API_URL
+ARG TM_IMPORT_MAX_FILESIZE
+ARG TM_CONSUMER_KEY
+ARG TM_CONSUMER_SECRET
+ARG TM_ORG_LOGO
+
 # SERVE
 COPY tasking-manager.env ..
 RUN npm run build
